# genix

./: .gitignore  .gitlab-ci.yml  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  COPYING  INSTALL  INSTALL.md  Jenkinsfile  Jenkinsfile.gitian  LICENSE  Makefile.am  Makefile.in  README.md  Thumbs.db  aclocal.m4  build-unix.sh  build-win.sh  build.sh  configure  configure.ac  libgenixconsensus.pc.in
src/: Makefile.am  Makefile.bench.include  Makefile.in  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  Thumbs.db  addrdb.h  addressindex.h  addrman.h  alert.cpp  alert.h  amount.cpp  amount.h  arith_uint256.h  base58.cpp  base58.h  batchedlogger.cpp  batchedlogger.h  bip39.h  bip39_english.h  bloom.h  cachemap.h  cachemultimap.h  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.h  chainparamsseeds.h  checkpoints.cpp  checkpoints.h  checkqueue.h  clientversion.cpp  clientversion.h  coincontrol.h  coins.h  compat.h  compressor.h  core_io.h  core_memusage.h  (+105 more)
src/bench/: .gitignore  Examples.cpp  bench.cpp  bench.h  bench_genix.cpp  bls.cpp  bls_dkg.cpp  crypto_hash.cpp  ecdsa.cpp  string_cast.cpp
src/bls/: bls.cpp  bls.h  bls_batchverifier.h  bls_ies.cpp  bls_ies.h  bls_worker.cpp  bls_worker.h
src/compat/: byteswap.h  endian.h  glibc_compat.cpp  glibc_sanity.cpp  sanity.h  strnlen.cpp
src/config/: genix-config.h.in
src/consensus/: consensus.h  merkle.cpp  merkle.h  params.h  validation.h
src/crypto/: common.h  hmac_sha256.h  hmac_sha512.h  ripemd160.h  sha1.h  sha256.h  sha512.h
src/drafted/: governance-categories.h  governance-classes.h  governance-keys.cpp  governance-keys.h  governance-types.cpp  governance-types.h
src/evo/: cbtx.cpp  cbtx.h  deterministicmns.cpp  deterministicmns.h  evodb.cpp  evodb.h  mnauth.cpp  mnauth.h  providertx.cpp  providertx.h  simplifiedmns.cpp  simplifiedmns.h  specialtx.cpp  specialtx.h
src/governance/: governance-classes.cpp  governance-classes.h  governance-exceptions.h  governance-object.cpp  governance-object.h  governance-validators.cpp  governance-validators.h  governance-vote.cpp  governance-vote.h  governance-votedb.cpp  governance-votedb.h  governance.cpp  governance.h
src/llmq/: quorums.cpp  quorums.h  quorums_blockprocessor.cpp  quorums_blockprocessor.h  quorums_chainlocks.cpp  quorums_chainlocks.h  quorums_commitment.cpp  quorums_commitment.h  quorums_debug.cpp  quorums_debug.h  quorums_dkgsession.cpp  quorums_dkgsession.h  quorums_dkgsessionhandler.cpp  quorums_dkgsessionhandler.h  quorums_dkgsessionmgr.cpp  quorums_dkgsessionmgr.h  quorums_init.cpp  quorums_init.h  quorums_instantsend.cpp  quorums_instantsend.h  quorums_signing.cpp  quorums_signing.h  quorums_signing_shares.cpp  quorums_signing_shares.h  quorums_utils.cpp  quorums_utils.h
src/masternode/: activemasternode.cpp  activemasternode.h  masternode-meta.cpp  masternode-meta.h  masternode-payments.cpp  masternode-payments.h  masternode-sync.cpp  masternode-sync.h  masternode-utils.cpp  masternode-utils.h
src/policy/: feerate.cpp  fees.cpp  fees.h  policy.cpp  policy.h  rbf.h
src/primitives/: block.cpp  block.h  transaction.h
src/privatesend/: privatesend-client.cpp  privatesend-client.h  privatesend-server.cpp  privatesend-server.h  privatesend-util.cpp  privatesend-util.h  privatesend.cpp  privatesend.h
src/qt/: addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  bantablemodel.h  bitcoinaddressvalidator.cpp  bitcoinamountfield.cpp  bitcoingui.cpp  bitcoingui.h  bitcoinunits.cpp  bitcoinunits.h  clientmodel.cpp  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.h  csvmodelwriter.h  darksendconfig.cpp  editaddressdialog.cpp  editaddressdialog.h  genix-qt.files  genix.cpp  genix.qrc  genix_locale.qrc  genixaddressvalidator.cpp  genixaddressvalidator.h  genixamountfield.cpp  genixamountfield.h  genixgui.cpp  genixgui.h  genixstrings.cpp  genixunits.cpp  genixunits.h  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  intro.h  (+67 more)
src/qt/forms/: addressbookpage.ui  coincontroldialog.ui  darksendconfig.ui  debugwindow.ui  helpmessagedialog.ui  intro.ui  modaloverlay.ui  optionsdialog.ui  overviewpage.ui  receivecoinsdialog.ui  sendcoinsdialog.ui  sendcoinsentry.ui  settingspage.ui  signverifymessagedialog.ui  toolspage.ui
src/qt/locale/: genix_ar.ts  genix_bg.ts  genix_de.ts  genix_en.ts  genix_es.ts  genix_fi.ts  genix_fr.ts  genix_it.ts  genix_ja.ts  genix_ko.ts  genix_nl.ts  genix_pl.ts  genix_pt.ts  genix_ro.ts  genix_ru.ts  genix_sk.ts  genix_sv.ts  genix_th.ts  (+4 more)
src/rpc/: blockchain.cpp  client.cpp  client.h  governance.cpp  masternode.cpp  mining.cpp  misc.cpp  net.cpp  privatesend.cpp  protocol.cpp  protocol.h  rawtransaction.cpp  rpcevo.cpp  rpcquorums.cpp  server.cpp  server.h
src/script/: genixconsensus.cpp  genixconsensus.h  interpreter.cpp  interpreter.h  script.h  script_error.h  sigcache.h  sign.h  standard.cpp  standard.h
src/support/: cleanse.h  lockedpool.cpp  pagelocker.cpp  pagelocker.h
src/test/: DoS_tests.cpp  Makefile  README.md  accounting_tests.cpp  addrman_tests.cpp  alert_tests.cpp  allocator_tests.cpp  amount_tests.cpp  arith_uint256_tests.cpp  base32_tests.cpp  base58_tests.cpp  base64_tests.cpp  bip32_tests.cpp  bip39_tests.cpp  blockencodings_tests.cpp  bloom_tests.cpp  bls_tests.cpp  bswap_tests.cpp  cachemap_tests.cpp  cachemultimap_tests.cpp  checkblock_tests.cpp  checkqueue_tests.cpp  coins_tests.cpp  compress_tests.cpp  crypto_tests.cpp  cuckoocache_tests.cpp  dbwrapper_tests.cpp  evo_deterministicmns_tests.cpp  evo_simplifiedmns_tests.cpp  genix-util-test.py  getarg_tests.cpp  governance_validators_tests.cpp  hash_tests.cpp  key_tests.cpp  limitedmap_tests.cpp  main_tests.cpp  mempool_tests.cpp  merkle_tests.cpp  miner_tests.cpp  multisig_tests.cpp  (+38 more)
src/wallet/: coincontrol.h  crypter.h  db.h  rpcdump.cpp  rpcwallet.cpp  wallet.cpp  wallet.h  wallet_ismine.h  walletdb.cpp  walletdb.h
src/zmq/: zmqabstractnotifier.h  zmqconfig.h  zmqnotificationinterface.h  zmqpublishnotifier.h
(+335 files in other folders)
